# AI-Robot-Challenge-Lab

./: .gitignore  .gitmodules  README.md  README_Draft.md  azure-pipelines.yml  bot-blink-light.py  intera.sh  talk-to-my-robot-lab.py  talk-to-my-robot.py
LabPart2/: talk-to-my-robot.py
LabPart3/sorting_demo/src/sorting_demo/: program.py
Resources/: robotics-demo.json
Solution/: talk-to-my-robot.py
docker/ubuntu-xenial-kinetic/: Dockerfile  build.sh  intera.sh  run.sh  run_docker_container.sh  runtime_test.py  runtime_test.sh  test-docker.sh
docs/: azure_resources.md  robotics_technologies.md
lab_documents/: README_Draft.md
python_bot/: README.md  main.py
resources/: azure_cv_resources.json  luis_azure_template.json  robotics-demo-luis-app.json
sawyer_ik_5d/: package.xml
sawyer_ik_5d/src/: sawyer_ik_5d_node.cpp
setup/: robot-challenge-setup.sh  sawyer_urdf.xml
setup/docker/: dockerfile
setup/ubuntu/: bot-stats-node.py  json  readme.md  requests  robot-challenge-setup.sh  subprocess  talk-to-my-robot-node.py  talk-to-my-robot.py
solution/: bot-stats-node.py  talk-to-my-robot.py
sorting_demo/: CMakeLists.txt  package.xml  setup.py
sorting_demo/launch/: robot_sorting_demo_control.launch  sawyer_world_custom.launch  sorting_demo.launch  test_moveit.launch
sorting_demo/models/table/meshes/: cafe_table.dae
sorting_demo/models/tray/: tray.urdf.xacro
sorting_demo/scripts/: sorting_demo.py
sorting_demo/share/: web_view.html
sorting_demo/src/: gazebo_object_detection.py
sorting_demo/src/sorting_demo/: cv_detection.py  cv_detection_camera_helper.py  cv_detection_head.py  cv_detection_right_hand.py  demo_constants.py  environment_estimation.py  gazebo_models.py  goto_angles_in_contact.py  gripper_action_server.py  object_detection.py  program.py  real_gripper.py  robot_control.py  robot_tasks_facade.py  sawyer_robot_facade.py  sorting_robot.py  task_planner.py  tasync.py  test_goto_angles.py  trajectory_planner.py
sorting_demo/src/sorting_demo/concepts/: block.py  tray.py
sorting_demo/src/sorting_demo/object_detection/: object_detection.py
sorting_demo/src/sorting_demo/utils/: mathutils.py
sorting_demo/urdf/: sawyer_custom.urdf.xacro  sawyer_pneumatic_small_gripper.urdf.xacro
sorting_demo/urdf/psg/: pneumatic_small_gripper.xacro
sorting_pieces_app/: CMakeLists.txt  package.xml
sorting_pieces_app/launch/: sorting_demo.launch
sorting_pieces_app/scripts/: sorting_demo.py
src/chatbot/: SawyerBot.bot  bot-move-grippers.py  talk-to-my-robot-completed.py  talk-to-my-robot.py
src/sawyer_ik_5d/: CMakeLists.txt
src/sawyer_ik_5d/src/: sawyer_ik_5d_node.cpp
src/sorting_demo/: CMakeLists.txt  package.xml  setup.py
src/sorting_demo/config/: rviz.rviz
src/sorting_demo/launch/: robot_sorting_demo_control.launch  sawyer_moveit.launch  sorting_demo.launch  test_moveit.launch
src/sorting_demo/models/block/: block.urdf.xacro
src/sorting_demo/models/table/: model.sdf
src/sorting_demo/models/tray/: tray.urdf.xacro
src/sorting_demo/scripts/: sorting_demo.py  test_moveit.py
src/sorting_demo/share/: testobstacle.txt  web_view.html
src/sorting_demo/src/chatbot/: bot-move-grippers.py  bot-wave-arm-node.py
src/sorting_demo/src/sorting_demo/: cv_detection.py  cv_detection_camera_helper.py  cv_detection_head.py  cv_detection_right_hand.py  demo_constants.py  environment_estimation.py  gazebo_models.py  goto_angles_in_contact.py  gripper_action_server.py  object_detection.py  program.py  real_gripper.py  robot_control.py  robot_funcs.py  robot_tasks_facade.py  sawyer_robot_facade.py  task_planner.py  tasync.py  test_goto_angles.py  trajectory_action_server.py  trajectory_planner.py
src/sorting_demo/src/sorting_demo/concepts/: block.py  gripper_state.py  table.py  tray.py
src/sorting_demo/src/sorting_demo/reinforcement_learning/: task_space_simulation.py
src/sorting_demo/src/sorting_demo/utils/: mathutils.py
