<?xml version="1.0"?>
<package format="2">
  <name>sorting_demo</name>
  <version>0.0.0</version>
  <description>The sorting demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pblasco@plainconcepts.com">Pablo Iñigo Blasco</maintainer>
  <maintainer email="mcsanchez@plainconcepts.com">Manuel Caballero Sánchez</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Microsoft Copyright</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sorting_demo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>force_torque_sensor_controller</build_depend>
  <build_depend>imu_sensor_controller</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>gripper_action_controller</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>moveit</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>sawyer_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>moveit</exec_depend>

  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gripper_action_controller</exec_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
